testsuite/tests/typecheck/should_fail/tcfail213.hs
{-# LANGUAGE TypeFamilies, ConstraintKind #-}
module ShouldFail where

type family F a :: Constraint

class (F a) => C a where
